# Machine-Learning

./: README.md
Identify Contrails/: alhod-identify-contrails-train.ipynb  alhod-identify-contrails.ipynb
Implementation From Scratch/: CMakeLists.txt  knn_regressor_test.cpp  linear_regression_test.cpp  logistic_regression_test.cpp  main.cpp
Implementation From Scratch/math_lib/src/: data_frame.cpp  data_frame.h  math_lib.cpp  math_lib.h  matrix.cpp  matrix.h  test.cpp
Implementation From Scratch/models/src/: models.h
Implementation From Scratch/models/src/K-Nearest Neighbors/: knn_classifier.cpp  knn_classifier.h  knn_regressor.cpp  knn_regressor.h
Implementation From Scratch/models/src/Linear Regression/: linear_regression.cpp
Implementation From Scratch/models/src/Linear Regression/Normal Equation/: LinearRegression.cpp  linear_regression.cpp  linear_regression.h
Implementation From Scratch/models/src/Logistic Regression/: logistic_regression.cpp  logistic_regression.h
Implementing Papers/U-Net/: u-net.ipynb
JamHacks2023/: JumpingJackGUI.py  JumpingJackNoGUI.py  Testing.py  tempCodeRunnerFile.python  test.py
Kaggle/Google Research - Identify Contrails to Reduce Global Warming/: alhod-identify-contrails-inference.ipynb  alhod-identify-contrails-train.ipynb  contrails-dataset-pca.ipynb
Kaggle/Jane Street Real-Time Market Data Forecasting/: alhod-jane-street-rmf.ipynb
Kaggle/Playground Series/Season 3/Episode 10/: alhod-playground-series-season-3-episode-10.ipynb
Kaggle/Playground Series/Season 3/Episode 12/: Testing.ipynb  Version5.ipynb  Version6.ipynb  Version9.ipynb  submission10.csv  submission2.csv  submission3.csv  submission4.csv  submission7.csv  submission8.csv
Kaggle/Playground Series/Season 3/Episode 13/: Version1.ipynb  Version3.ipynb  Version4.ipynb  submission1.csv  submission2.csv
Kaggle/Playground Series/Season 3/Episode 16/: Version 1.ipynb
Kaggle/Playground Series/Season 3/Episode 20/: submission (1).csv
ML Hackathon Projects/JamHacks2023/: JumpingJackGUI.py  tempCodeRunnerFile.python  test2.py  test3.py
ML Models Implemented From Scratch/C++/: execute.bat  execute_sequence.txt  knn_classifier_test.cpp
ML Models Implemented From Scratch/C++/math_lib/src/: math_lib.cpp  matrix.cpp  (+1 more)
ML Models Implemented From Scratch/Java/Digit Classifier/: README.md
Plaground Series - Season 3, Episode 8/: alhod-playground-series-season-3-episode-8.ipynb
Playground Series - Season 3, Episode 12/: BestSubmission.ipynb  Version3.ipynb  Version4.ipynb  Version7.ipynb  Version8.ipynb  main.ipynb  submission.csv  submission1.csv  submission11.csv  submission5.csv  submission6.csv  submission9.csv
Playground Series - Season 3, Episode 13/: Version2.ipynb  submission3.csv
test/udp-websocket-client/: package-lock.json  package.json
test/udp-websocket-client/src/: App.css  App.js
(+24 files in other folders)
